tests/error/private.gw
#! [contains] invalid variable access
class C { var private int i;  }

var C c;
<<< c.i >>>;
